# hitsu

./: .gitignore  PRIVACY.md  README.md  biome.json  justfile  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  vite.config.js
.github/workflows/: audit.yml  ci.yml  nightly.yml
browser-extension/: background-loader.js  background.js  background.test.js  popup.css  popup.html
browser-extension/native-host/src/: main.rs
chrome-extension/: README.md  background.js  background.test.js  content.js  install-host.sh  manifest.json  popup.html  popup.js
chrome-extension/native-host/: Cargo.toml
chrome-extension/native-host/src/: main.rs
e2e/: wdio.conf.js
e2e/specs/: vault.e2e.js
firefox-extension/: README.md  background.js  background.test.js  content.js  content.test.js  install-host.sh  manifest.json  popup.js
scripts/: build-browser-extension.mjs  prepare-native-host.mjs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_lock.rs  browser_ipc.rs  error.rs  hardening.rs  kdbx_fields.rs  lib.rs  logging.rs  main.rs  prefs.rs  session_lock.rs  state.rs
src-tauri/src/commands/: clipboard.rs  entries.rs  generator.rs  idle.rs  import.rs  mod.rs  prefs.rs  totp.rs  vault.rs
src-tauri/src/models/: entry.rs  item_type.rs  maintenance.rs  mod.rs
src-tauri/src/vault/: atomic_write.rs  disk.rs  mod.rs
src-tauri/tests/: entries_integration.rs  totp_tests.rs  vault_integration.rs  vault_replace_integration.rs
src/lib/: entryTypes.test.ts  entryTypes.ts
src/lib/bridge/: clipboard.ts  entries.test.ts  entries.ts  folders.test.ts  folders.ts  generator.ts  prefs.ts  totp.ts  types.ts  vault.ts
src/lib/components/: MainApp.svelte
src/lib/components/chrome/: StatusBar.svelte  StatusBar.test.ts
src/lib/components/detail/: AttachmentList.svelte  AttachmentList.test.ts  DetailFieldRow.svelte  DetailFooter.svelte  DetailHeader.svelte  EmptyDetail.svelte  Field.svelte  FieldGroup.svelte  HistoryDialog.svelte  ItemDetail.svelte  ItemDetail.test.ts  NotesField.svelte  PasswordField.svelte  PasswordField.test.ts  SecretEditInput.svelte  SecretEditInput.test.ts  TOTPField.svelte  TotpField.svelte
src/lib/components/generator/: GeneratorPanel.svelte  GeneratorPanel.test.ts
src/lib/components/list/: EntryIcon.svelte  ItemList.svelte  ItemList.test.ts  ItemListRow.svelte  ItemListRow.test.ts  SearchField.svelte  SearchField.test.ts
src/lib/components/settings/: SettingsView.svelte  SettingsView.test.ts
src/lib/components/sidebar/: Sidebar.svelte  Sidebar.test.ts  SidebarItem.svelte  SidebarSection.svelte
src/lib/components/ui/: Button.svelte  CommandPalette.svelte  CommandPalette.test.ts  ConfirmDialog.svelte  Dialog.svelte  Dialog.test.ts  EntryCommandPalette.svelte  EntryCommandPalette.test.ts  Icon.svelte  IconButton.svelte  PasswordDialog.svelte  PasswordDialog.test.ts  PasswordStrengthMeter.svelte  ShortcutsDialog.svelte  TagInput.svelte  ToastStack.svelte  TotpSetupDialog.svelte
src/lib/components/unlock/: OnboardingView.svelte  OnboardingView.test.ts  UnlockScreen.svelte
src/lib/stores/: app.svelte.ts  clipboard.svelte.ts  clipboard.test.ts  entryDeletion.svelte.ts  entryDeletion.test.ts  features.svelte.ts  idle.svelte.ts  nativeDialog.svelte.ts  nativeDialog.test.ts  recycleBin.svelte.ts  recycleBin.test.ts  saveStatus.svelte.ts  saveStatus.test.ts  security.svelte.ts  selection.svelte.ts  selection.test.ts  theme.svelte.ts  theme.test.ts  toast.svelte.ts  vault.svelte.ts  vault.test.ts
src/lib/styles/: controls.css  global.css  reset.css  tokens.css
src/lib/utils/: entrySearch.svelte.ts  errorMessage.test.ts  format.ts  openHttpUrl.test.ts  openHttpUrl.ts  otp.ts  paletteKeydown.ts  passwordStrength.test.ts  passwordStrength.ts  search.test.ts  search.ts  tagColor.test.ts  tagColor.ts
src/routes/: +layout.svelte  +page.svelte  layout.test.ts  page.test.ts
src/test/: setup.ts
src/test/fixtures/: DialogHarness.svelte
static/: init.css
