[package]
name = "kagi"
version = "0.1.0"
description = "Kagi — native desktop password manager"
authors = ["you"]
edition = "2021"

[lib]
name = "kagi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keepass = { version = "0.7", features = ["save_kdbx4"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
arboard = "3"
rand = "0.8"
zeroize = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
