[package]
name = "hitsu"
version = "0.1.0"
description = "Hitsu — native desktop password manager"
authors = ["you"]
edition = "2021"

[lib]
name = "hitsu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Release profile hardening: smallest/fastest binary with no debug info, and
# arithmetic overflow always checked — this process holds decrypted vaults, so
# a silent wraparound is worse than the marginal size/speed cost.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = true
debug = false

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tauri = { version = "2", features = ["test"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keepass = { version = "0.13", features = ["save_kdbx4", "totp"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["time", "sync"] }
arboard = "3"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
argon2 = { package = "rust-argon2", version = "3.0" }
base64 = "0.22"
sha2 = "0.10"
subtle = "2"
percent-encoding = "2"
parking_lot = "0.12"
url = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.16"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["block2", "NSDistributedNotificationCenter", "NSNotification", "NSOperation", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace"] }
