[package]
name = "hitsu-native-host"
version = "0.1.0"
edition = "2021"
publish = false

# Sidecar binary shipped inside the app bundle — keep it small and stripped.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = true
debug = false

[dependencies]
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
